@@ -1,3 +1,7 @@
+2014-08-01  James Monk  <jmonk@cern.ch>
+  * Add MomentumHelpers.hh - templated helper funcs to extract momentum quantities from particles
+  * Use momentum helper funcs inside WaveletEvent and RasterisedEvent for more general particle case
+
 2014-07-28  James Monk  <jmonk@cern.ch>
   * Initialise particles to input particles for WaveletEvent
 
